--- a/A07load-data.ipynb
+++ b/A07load-data.ipynb
@@ -12,17 +12,12 @@
     "- [2. 加载numpy的数据 tf.keras.utils.get_file](#2.加载numpy的数据)\n",
     "- [3. 加载pandas的数据](#3.加载pandas的数据)\n",
     "- [4. 加载图片数据 tf.image.decode_image](#4.加载图片数据)\n",
-    "- [5. 加载文本数据](#5.加载文本数据)\n",
-    "- [](#)\n",
-    "- [](#)\n",
-    "- [](#)\n",
-    "- [](#)\n",
-    "- [](#)"
+    "- [5. 加载文本数据](#5.加载文本数据)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +26,9 @@
     "\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
-    "import tensorflow_datasets as tfds"
+    "import tensorflow_datasets as tfds\n",
+    "\n",
+    "import os"
    ]
   },
   {
@@ -2107,52 +2104,294 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/root/.keras/datasets'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DIRECTORY_URL = 'https://storage.googleapis.com/download.tensorflow.org/data/illiad/'\n",
+    "FILE_NAMES = ['cowper.txt', 'derby.txt', 'butler.txt']\n",
+    "\n",
+    "for name in FILE_NAMES:\n",
+    "    text_dir = tf.keras.utils.get_file(name, origin=DIRECTORY_URL+name)\n",
+    "  \n",
+    "parent_dir = os.path.dirname(text_dir)\n",
+    "\n",
+    "parent_dir"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "﻿Achilles sing, O Goddess! Peleus' son;\n",
+      "His wrath pernicious, who ten thousand woes\n",
+      "Caused to Achaia's host, sent many a soul\n",
+      "Illustrious into Ades premature,\n",
+      "And Heroes gave (so stood the will of Jove)\n",
+      "To dogs and to all ravening fowls a prey,\n",
+      "When fierce dispute had separated once\n",
+      "The noble Chief Achilles from the son\n",
+      "Of Atreus, Agamemnon, King of men.\n",
+      "Who them to strife impell'd? What power divine?\n"
+     ]
+    }
+   ],
+   "source": [
+    "!head /root/.keras/datasets/cowper.txt"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(<tf.Tensor: id=150148, shape=(), dtype=string, numpy=b'We here against the Greeks unflinching war'>, <tf.Tensor: id=150149, shape=(), dtype=int64, numpy=1>)\n",
+      "(<tf.Tensor: id=150152, shape=(), dtype=string, numpy=b'blubbering back to the ships.\"'>, <tf.Tensor: id=150153, shape=(), dtype=int64, numpy=2>)\n",
+      "(<tf.Tensor: id=150156, shape=(), dtype=string, numpy=b'His brothers, next, collected, and his friends,'>, <tf.Tensor: id=150157, shape=(), dtype=int64, numpy=0>)\n",
+      "(<tf.Tensor: id=150160, shape=(), dtype=string, numpy=b'been so, we should long since have ended the war by sacking the strong'>, <tf.Tensor: id=150161, shape=(), dtype=int64, numpy=2>)\n",
+      "(<tf.Tensor: id=150164, shape=(), dtype=string, numpy=b'Exadius, Coeneus, and the Godlike son'>, <tf.Tensor: id=150165, shape=(), dtype=int64, numpy=0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 读取文本数据及标签\n",
+    "def labeler(example, index):\n",
+    "    return example, tf.cast(index, tf.int64)  \n",
+    "\n",
+    "labeled_data_sets = []\n",
+    "\n",
+    "for i, file_name in enumerate(FILE_NAMES):\n",
+    "    lines_dataset = tf.data.TextLineDataset(os.path.join(parent_dir, file_name))\n",
+    "    labeled_dataset = lines_dataset.map(lambda ex: labeler(ex, i))\n",
+    "    labeled_data_sets.append(labeled_dataset)\n",
+    "    \n",
+    "# 所有数据拼在一起\n",
+    "all_labeled_data = labeled_data_sets[0]\n",
+    "for labeled_dataset in labeled_data_sets[1:]:\n",
+    "    all_labeled_data = all_labeled_data.concatenate(labeled_dataset)\n",
+    "\n",
+    "# 打乱数据\n",
+    "BUFFER_SIZE = 50000\n",
+    "BATCH_SIZE = 64\n",
+    "TAKE_SIZE = 5000\n",
+    "\n",
+    "all_labeled_data = all_labeled_data.shuffle(BUFFER_SIZE, reshuffle_each_iteration=False)\n",
+    "\n",
+    "# 查看数据\n",
+    "for ex in all_labeled_data.take(5):\n",
+    "    print(ex)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**文本转向量**"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "size of vocabulary: 17178\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 构建词汇表\n",
+    "tokenizer = tfds.features.text.Tokenizer()\n",
+    "\n",
+    "vocabulary_set = set()\n",
+    "for text_tensor, _ in all_labeled_data:\n",
+    "    some_tokens = tokenizer.tokenize(text_tensor.numpy())\n",
+    "    vocabulary_set.update(some_tokens)\n",
+    "\n",
+    "vocab_size = len(vocabulary_set)\n",
+    "print(\"size of vocabulary:\", vocab_size)\n",
+    "\n",
+    "# 文本转向量\n",
+    "encoder = tfds.features.text.TokenTextEncoder(vocabulary_set)\n",
+    "\n",
+    "# example_text = next(iter(all_labeled_data))[0].numpy()\n",
+    "# print(example_text)  # b'And his own comrades from the circus forth'\n",
+    "\n",
+    "# encoded_example = encoder.encode(example_text)\n",
+    "# print(encoded_example)  # [5191, 16956, 4568, 7345, 15698, 1916, 2014, 9685]\n",
+    "\n",
+    "# 在数据集上运行编码器（通过将编码器打包到 tf.py_function 并且传参至数据集的 map 方法的方式来运行）\n",
+    "def encode(text_tensor, label):\n",
+    "    encoded_text = encoder.encode(text_tensor.numpy())\n",
+    "    return encoded_text, label\n",
+    "\n",
+    "def encode_map_fn(text, label):\n",
+    "    # py_func doesn't set the shape of the returned tensors.\n",
+    "    encoded_text, label = tf.py_function(encode, inp=[text, label], Tout=(tf.int64, tf.int64))\n",
+    "\n",
+    "    # `tf.data.Datasets` work best if all components have a shape set\n",
+    "    #  so set the shapes manually: \n",
+    "    encoded_text.set_shape([None])\n",
+    "    label.set_shape([])\n",
+    "\n",
+    "    return encoded_text, label\n",
+    "\n",
+    "\n",
+    "all_encoded_data = all_labeled_data.map(encode_map_fn)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 9662 14368  4150  2522   126 12504  2603]\n",
+      "------------------\n",
+      "[ 9662 14368  4150  2522   126 12504  2603]\n",
+      "[10442   633 14088  2522  6221]\n",
+      "------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "e_text = next(iter(all_encoded_data))[0].numpy()\n",
+    "print(e_text)\n",
+    "print(\"------------------\")\n",
+    "for i in all_encoded_data.take(2):\n",
+    "    print(i[0].numpy())\n",
+    "print(\"------------------\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**数据划分**\n",
+    "\n",
+    "使用 `tf.data.Dataset.take` 和 `tf.data.Dataset.skip` 来建立一个**小一些的测试数据集**和**稍大一些的训练数据集**。\n",
+    "\n",
+    "数据集中样本并不全是相同大小的（每行文本字数并不相同），**使用 tf.data.Dataset.padded_batch（而不是 batch ）将样本填充到相同的大小**。\n",
+    "\n",
+    "https://www.tensorflow.org/api_docs/python/tf/data/Dataset?version=stable#padded_batch\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[ 9662 14368  4150  2522   126 12504  2603     0     0     0     0     0\n",
+      "     0     0     0     0], shape=(16,), dtype=int64)\n",
+      "tf.Tensor(1, shape=(), dtype=int64)\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_data = all_encoded_data.skip(TAKE_SIZE).shuffle(BUFFER_SIZE)\n",
+    "train_data = train_data.padded_batch(BATCH_SIZE,padded_shapes=([None],[]))\n",
+    "\n",
+    "test_data = all_encoded_data.take(TAKE_SIZE)\n",
+    "test_data = test_data.padded_batch(BATCH_SIZE,padded_shapes=([None],[]))\n",
+    "\n",
+    "sample_text, sample_labels = next(iter(test_data))\n",
+    "print(sample_text[0])\n",
+    "print(sample_labels[0])\n",
+    "\n",
+    "# 引入了一个新的 token 来编码（填充零），因此词汇表大小增加了一个\n",
+    "vocab_size += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**构建与训练模型**"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "W0115 16:16:44.749212 139830666602304 deprecation.py:323] From /usr/local/python3/lib/python3.6/site-packages/tensorflow/python/ops/math_grad.py:1250: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "697/697 [==============================] - 54s 78ms/step - loss: 0.5163 - accuracy: 0.7487 - val_loss: 0.0000e+00 - val_accuracy: 0.0000e+00\n",
+      "Epoch 2/3\n",
+      "697/697 [==============================] - 43s 62ms/step - loss: 0.2941 - accuracy: 0.8698 - val_loss: 0.4016 - val_accuracy: 0.8298\n",
+      "Epoch 3/3\n",
+      "697/697 [==============================] - 39s 56ms/step - loss: 0.2142 - accuracy: 0.9083 - val_loss: 0.4495 - val_accuracy: 0.8240\n",
+      "     79/Unknown - 4s 52ms/step - loss: 0.4495 - accuracy: 0.8240\n",
+      "Eval loss: 0.449500645546219, Eval accuracy: 0.8240000009536743\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = tf.keras.Sequential()\n",
+    "model.add(tf.keras.layers.Embedding(vocab_size, 64))\n",
+    "model.add(tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(64)))\n",
+    "model.add(tf.keras.layers.Dense(64, activation='relu'))\n",
+    "model.add(tf.keras.layers.Dense(64, activation='relu'))\n",
+    "model.add(tf.keras.layers.Dense(3, activation='softmax'))\n",
+    "\n",
+    "model.compile(optimizer='adam',\n",
+    "              loss='sparse_categorical_crossentropy',\n",
+    "              metrics=['accuracy'])\n",
+    "\n",
+    "model.fit(train_data, epochs=3, validation_data=test_data)\n",
+    "\n",
+    "eval_loss, eval_acc = model.evaluate(test_data)\n",
+    "print('\\nEval loss: {}, Eval accuracy: {}'.format(eval_loss, eval_acc))"
+   ]
   },
   {
    "cell_type": "code",
